# damask_pr

./: .gitignore  pyproject.toml
damask/: manage.py
damask/cart/: cart.py  forms.py  urls.py  views.py
damask/cart/templates/cart/: detail.html
damask/damask/: asgi.py  settings.py  urls.py  wsgi.py
damask/orders/: models.py  views.py
damask/orders/migrations/: 0001_initial.py
damask/orders/templates/orders/order/: create.html  created.html
damask/shop/: models.py  views.py
damask/shop/migrations/: 0001_initial.py
damask/shop/templates/shop/: base.html
damask/shop/templates/shop/product/: detail.html  list.html
